# ScanPi

./: .gitignore  AGENT_CONTRACT.md  AGENT_REPORT_ALERTS.md  AGENT_REPORT_GEO.md  AGENT_REPORT_HACKRF.md  AGENT_REPORT_SEARCH.md  README.md  SCANNER_UI_SPEC.md  install.sh  pyproject.toml
deploy/: README.md  gmrs_intel.py  patch_context.py  rssi_probe.py
deploy/heimdall_audio_repair/: README.md  audio_range_serve.py  fm_demod_rebuild.py
docs/: OVERNIGHT_2026-04-14.md  auth.md  imaging.md
install/: firstboot.sh  install-full.sh  install-lite.sh  install.sh  watchlist.default.yaml
profiles/: full.toml  lite.toml  nuc-conservative.toml
profiles/sdrs/presets/: hackrf_gmrs_frs.toml  hackrf_marine_vhf.toml  hackrf_uhf_business.toml  hackrf_vhf_public_safety.toml
src/scanpi/: __init__.py  __main__.py  alerts.py  api.py  api_profile.py  app.py  app_v3.py  classifier.py  cli.py  cli_v3.py  coalesce.py  config.py  coordinator.py  db.py  notify.py  op25_bridge.py  page.html  profile.py  retention.py  scanner.py  storage.py  surveyor.py  transcriber.py  trunking.py
src/scanpi/gmrs/: __init__.py  api.py  cli.py  service.py  web.html
src/scanpi/tools/: __init__.py
src/scanpi/tools/alerts/: README.md  SUBSCRIBERS.md  __init__.py  api.py  db.py  matcher.py  page.html  publisher.py  watchlist.py
src/scanpi/tools/geo/: README.md  __init__.py  api.py  db.py  extractor.py  geocoder.py  page.html
src/scanpi/tools/geo/data/: streets_seed.csv  towns_seed.csv
src/scanpi/tools/gmrs/: __init__.py  channels.py  db.py  monitor.py  page.html  transcriber.py
src/scanpi/tools/hackrf/: README.md  __init__.py  api.py  db.py  flowgraph.py  page.html  profiles.py  test_offline.py
src/scanpi/tools/op25/: __init__.py  bridge.py  channels.py  db.py  page.html
src/scanpi/tools/search/: README.md  __init__.py  api.py  db.py  embed.py  page.html
src/scanpi/tools/ysone/: __init__.py  db.py  page.html  worker.py
src/scanpi/web/: index.html  settings.html  theme.css
